# integrity-code-series-week11-erosion-corrosion-multiphase

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  README.md  TEST_SUMMARY.md  pyproject.toml  requirements.txt  run_all.py
.github/workflows/: ci.yml
assets/: feature_importance.json  mc_dataset.csv  parity.csv  surrogate_metrics.json
docs/: equations.html
src/: constants.py  corrosion_norsok.py  cybersecurity.py  ec_model.py  elbow_field.py  erosion_dnv.py  ffs_api579.py  hydrodynamics.py  monte_carlo.py  multiphase_flow.py  surrogate_gbr.py  synergy_g119.py
tests/: conftest.py  test_corrosion_norsok.py  test_cybersecurity.py  test_ec_model.py  test_erosion_dnv.py  test_ffs_api579.py  test_hydrodynamics.py  test_monte_carlo.py  test_multiphase_flow.py  test_physics_corrections.py  test_surrogate.py  test_synergy_g119.py  test_visualization.py
validation/: benchmarks.py
viz/: plot_gif.py  plot_hero.py  plot_secondary.py
